--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/aqme-{{ version }}.tar.gz
+  url: https://github.com/jvalegre/aqme/archive/refs/tags/1.3.0.tar.gz
   sha256: f1222f1b5d06c53677c9b8f78f4eb8198677a07829d67c7672c46783676b47c5
 
 build:
